# term-pet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  hackernews-release.md  integrate.md  pyproject.toml  reddit-release.md
.github/workflows/: build.yml  publish-dev.yml  publish.yml  release.yml
docs/: ARCHITECTURE.md  DOCUMENTATION_STYLE_GUIDE.md  OLLAMA.md
macos_desktop/: Package.swift  todo_claude_plugin.md
macos_desktop/Sources/Deskpet/: AppDelegate.swift  CommentBubbleWindow.swift  CommentBus.swift  PetConfig.swift  PetController.swift  PetView.swift  PetWindow.swift  Sprites.swift  WindowSurfaces.swift  main.swift
scripts/: ollama_art_results.json  ollama_art_test_config-sample.yaml  ollama_commentary_report.html  ollama_test_config-sample.yaml  test_ollama_art.py  test_ollama_commentary.py
src/tpet/: __init__.py  __main__.py  app.py  cli.py  config.py  io.py  llm_client.py
src/tpet/animation/: __init__.py  engine.py
src/tpet/art/: __init__.py  client.py  detect.py  generator.py  openai_client.py  process.py  storage.py
src/tpet/commentary/: __init__.py  generator.py  prompts.py
src/tpet/models/: __init__.py  pet.py  rarity.py  stats.py
src/tpet/monitor/: __init__.py  parser.py  text_watcher.py  watcher.py
src/tpet/profile/: __init__.py  generator.py  storage.py
src/tpet/renderer/: __init__.py  card.py  display.py  macos_desktop.py  preview.py  protocol.py  statbars.py
tests/: conftest.py  test_animation.py  test_art_detect.py  test_art_process.py  test_art_storage.py  test_card.py  test_cli.py  test_commentary.py  test_config.py  test_display.py  test_generator.py  test_parser.py  test_pet_model.py  test_rarity.py  test_statbars.py  test_stats.py  test_storage.py  test_text_watcher.py  test_watcher.py
